--- a/.hound.yml
+++ b/.hound.yml
@@ -2,6 +2,8 @@
 AllCops:
   Exclude:
     - db/schema.rb
+    - db/migrate/*.rb
+    - db/migreate/*
   #DisplayCopNames: true
 
 AccessorMethodName:
@@ -120,7 +122,7 @@ LineEndConcatenation:
   Enabled: false
 
 LineLength:
-  Max: 80
+  Max: 180
 
 MethodLength:
   Enabled: false
@@ -277,3 +279,10 @@ Style/UnneededPercentQ:
 
 Metrics/AbcSize:
   Enabled: false
+  
+  ruby:
+    ignore_file: .hound_ignore
+    config_file: .ruby-style.yml
+
+  scss:
+    config_file: .scss-style.yml
